<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    android:padding="16dp"
    android:background="?android:attr/windowBackground"
    android:elevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:text="@string/global"
            android:textSize="20sp"
            android:textColor="@color/colorTextLight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="2020-xx-xx"
            android:textColor="@color/colorTextLight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirmed"
                android:textColor="@color/colorConfirmed"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/active"
                android:textColor="@color/colorActive"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recovered"
                android:textColor="@color/colorRecovered"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/death"
                android:textColor="@color/colorDeath"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/card_global_confirmedNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2,000,000"
                android:textColor="@color/colorConfirmed"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/card_global_activeNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1,500,000"
                android:textColor="@color/colorActive"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/card_global_recoveredNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="400,000"
                android:textColor="@color/colorRecovered"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/card_global_deathNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="100,000"
                android:textColor="@color/colorDeath"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/card_global_confirmedIncrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+40,000"
                android:textColor="@color/colorConfirmed"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/card_global_activeIncrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+35,000"
                android:textColor="@color/colorActive"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/card_global_recoveredIncrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+4,000"
                android:textColor="@color/colorRecovered"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/card_global_deathIncrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+1,000"
                android:textColor="@color/colorDeath"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/card_global_confirmedIncreaseRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+6.0%"
                android:textColor="@color/colorConfirmed"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/card_global_activeIncreaseRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+4.0%"
                android:textColor="@color/colorActive"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/card_global_recoveredIncreaseRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+1.5%"
                android:textColor="@color/colorRecovered"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/card_global_deathIncreaseRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+0.5%"
                android:textColor="@color/colorDeath"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>
    
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/card_global_pieChart"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="16dp"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/card_global_lineChart"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="16dp"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/card_global_barChart"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>

</LinearLayout>