<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    android:padding="16dp"
    android:background="?android:attr/windowBackground"
    android:elevation="12dp">

    <TextView
        android:id="@+id/global_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_vertical"
        android:text="2020-xx-xx"
        android:textColor="@color/colorTextLight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="32dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirmed"
                android:textColor="@color/colorConfirmed"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/active"
                android:textColor="@color/colorActive"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recovered"
                android:textColor="@color/colorRecovered"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/death"
                android:textColor="@color/colorDeath"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/global_confirmedNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorConfirmed"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/global_activeNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorActive"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/global_recoveredNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorRecovered"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/global_deathNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorDeath"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/global_confirmedIncrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorConfirmed"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/global_activeIncrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorActive"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/global_recoveredIncrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorRecovered"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/global_deathIncrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorDeath"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/global_confirmedIncreaseRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorConfirmed"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/global_activeIncreaseRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorActive"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/global_recoveredIncreaseRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorRecovered"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/global_deathIncreaseRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorDeath"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>
    
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/global_pieChart"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="32dp"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/global_lineChart"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>

</LinearLayout>